src/tests/testfiles/ternary-operator/types-1.txt
testfiles/ternary-operator/types-1.c:3:6: error: invalid first operand to ternary '?:' (have 'char []', need 'int')
("3.0" ? "a" : "b");
 ^
